# jinja2-live-parser

./: README.md  app.py  pyproject.toml
static/: convert.js  index.html  style.css
