[tool.poetry]
name = "jinja2-live-parser"
version = "0.1.0"
description = "A web application which fills a template with values specified in YAML format."
authors = ["Matjaž Žganec <matjaz@genialis.com>", "Fotis Gimian <fgimiansoftware@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pyyaml = "^6.0"
ansible = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
mypy = "^1.4.1"
types-pyyaml = "^6.0.12.10"

[tool.ruff]
select = ["ALL"]
ignore = ["D"]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
